// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaginationButtons /> Render first page 1`] = `
<div
  className="pagination-buttons"
>
  <div
    className="pagination-buttons__info"
  >
    <span
      className="pagination-info__start"
    >
      1
    </span>
    <span>
       - 
    </span>
    <span
      className="pagination-info__end"
    >
      20
    </span>
    <span>
       of 
    </span>
    <span
      className="pagination-info__total"
    >
      60
    </span>
  </div>
  <div
    className="pagination-buttons__buttons btn-group"
  >
    <button
      className="pagination-buttons__prev btn btn-default"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <button
      className="pagination-buttons__next btn btn-default"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;

exports[`<PaginationButtons /> Render last page 1`] = `
<div
  className="pagination-buttons"
>
  <div
    className="pagination-buttons__info"
  >
    <span
      className="pagination-info__start"
    >
      41
    </span>
    <span>
       - 
    </span>
    <span
      className="pagination-info__end"
    >
      60
    </span>
    <span>
       of 
    </span>
    <span
      className="pagination-info__total"
    >
      60
    </span>
  </div>
  <div
    className="pagination-buttons__buttons btn-group"
  >
    <button
      className="pagination-buttons__prev btn btn-default"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <button
      className="pagination-buttons__next btn btn-default"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;

exports[`<PaginationButtons /> Render last page with less items than perPage 1`] = `
<div
  className="pagination-buttons"
>
  <div
    className="pagination-buttons__info"
  >
    <span
      className="pagination-info__start"
    >
      61
    </span>
    <span>
       - 
    </span>
    <span
      className="pagination-info__end"
    >
      63
    </span>
    <span>
       of 
    </span>
    <span
      className="pagination-info__total"
    >
      63
    </span>
  </div>
  <div
    className="pagination-buttons__buttons btn-group"
  >
    <button
      className="pagination-buttons__prev btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <button
      className="pagination-buttons__next btn btn-default"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;

exports[`<PaginationButtons /> Render only page 1`] = `
<div
  className="pagination-buttons"
>
  <div
    className="pagination-buttons__info"
  >
    <span
      className="pagination-info__start"
    >
      1
    </span>
    <span>
       - 
    </span>
    <span
      className="pagination-info__end"
    >
      10
    </span>
    <span>
       of 
    </span>
    <span
      className="pagination-info__total"
    >
      10
    </span>
  </div>
  <div
    className="pagination-buttons__buttons btn-group"
  >
    <button
      className="pagination-buttons__prev btn btn-default"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <button
      className="pagination-buttons__next btn btn-default"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;

exports[`<PaginationButtons /> Render with properties 1`] = `
<div
  className="pagination-buttons"
>
  <div
    className="pagination-buttons__info"
  >
    <span
      className="pagination-info__start"
    >
      21
    </span>
    <span>
       - 
    </span>
    <span
      className="pagination-info__end"
    >
      40
    </span>
    <span>
       of 
    </span>
    <span
      className="pagination-info__total"
    >
      60
    </span>
  </div>
  <div
    className="pagination-buttons__buttons btn-group"
  >
    <button
      className="pagination-buttons__prev btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-left"
      />
    </button>
    <button
      className="pagination-buttons__next btn btn-default"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <i
        className="fa fa-chevron-right"
      />
    </button>
  </div>
</div>
`;
